@@ -20,10 +20,15 @@ echo "${info} *** Compiling modules in '$COM_GREETINGS_FOLDER' *** ${normal}"
 #
 # The compiler creates the 'mods' folder, if it does not exist already and places compiled modules into them.
 
-javac [param to specify path to the module*] mods \
-      -d [path to the compiled module**] \
+javac --add-modules com.greetings \
+      -d $COM_GREETINGS_FOLDER \
       src/com.greetings/module-info.java \
       src/com.greetings/com/greetings/Main.java
+
+#javac [param to specify path to the module*] mods \
+#      -d [path to the compiled module**] \
+#      src/com.greetings/module-info.java \
+#      src/com.greetings/com/greetings/Main.java
 
 #
 # * can be either long or short form, look for tool references, quick started guides, and other documentation in the Java 9 Resource (https://github.com/AdoptOpenJDK/jdk9-jigsaw/blob/master/Java-9-Resources.md).
